--- a/diabtes python.ipynb
+++ b/diabtes python.ipynb
@@ -1163,9 +1163,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dc57444",
+   "metadata": {},
+   "source": [
+    "## Result\n",
+    "\n",
+    " Logistic Regression and Random Forest models were trained on the dataset using only HbA1c_level as a predictor variable for diabetes.\n",
+    "\n",
+    "Model performance:\n",
+    "- Logistic Regression: Accuracy = 0.9378; Confusion Matrix = [[17509, 0], [1197, 524]]\n",
+    "- Random Forest: Accuracy = 0.9517; Confusion Matrix = [[17509, 0], [929, 792]]\n",
+    "\n",
+    "From these findings, we can conclude that there is a significant difference in HbA1c levels between patients with and without diabetes and that using HbA1c level as a predictor variable can help predict diabetes with reasonable accuracy. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e40e2d61",
+   "id": "43cd45ac",
    "metadata": {},
    "outputs": [],
    "source": []
